--- a/StyleSet/app/src/main/res/layout/toolbar_center.xml
+++ b/StyleSet/app/src/main/res/layout/toolbar_center.xml
@@ -21,6 +21,7 @@
             android:layout_gravity="center"
             android:gravity="center"
             android:text="@string/app_name"
-            android:textSize="20sp"/>
+            android:textSize="20sp"
+            android:textColor="@android:color/white"/>
     </android.support.v7.widget.Toolbar>
 </android.support.design.widget.AppBarLayout>
