--- a/StyleSet/app/src/main/res/layout/titlebar_customizationr.xml
+++ b/StyleSet/app/src/main/res/layout/titlebar_customizationr.xml
@@ -1,49 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="64dp"
     android:elevation="16dp"
     android:fitsSystemWindows="false"
-    android:minHeight="?attr/actionBarSize">
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="64dp"
-        android:background="@color/skyBlue">
-        <ImageView
-            android:id="@+id/image_goBack"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_centerVertical="false"
-            android:paddingLeft="8dp"
-            android:paddingTop="24dp"
-            android:paddingRight="4dp"
-            android:paddingBottom="8dp"
-            android:src="@mipmap/ic_launcher"/>
-        <TextView
-            android:id="@+id/text_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="24dp"
-            android:ems="8"
-            android:maxLength="8"
-            android:ellipsize="end"
-            android:gravity="center"
-            android:text="@string/app_name"
-            android:textSize="20sp"
-            android:textColor="@android:color/white"/>
-        <LinearLayout
-            android:id="@+id/linear_navi"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:gravity="top"
-            android:paddingTop="24dp"
-            android:paddingRight="16dp"
-            android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"
-            android:visibility="visible"/>
-    </RelativeLayout>
+    android:minHeight="?attr/actionBarSize"
+    android:background="@color/skyBlue">
+    <ImageView
+        android:id="@+id/image_goBack"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_centerVertical="false"
+        android:paddingBottom="8dp"
+        android:paddingLeft="8dp"
+        android:paddingRight="4dp"
+        android:paddingTop="24dp"
+        android:src="@mipmap/ic_launcher" />
+    <TextView
+        android:id="@+id/text_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="0dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginBottom="8dp"
+        android:ellipsize="end"
+        android:ems="8"
+        android:gravity="center"
+        android:maxLength="8"
+        android:text="@string/app_name"
+        android:textColor="@android:color/white"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+    <LinearLayout
+        android:id="@+id/linear_navi"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:gravity="top"
+        android:orientation="horizontal"
+        android:paddingRight="16dp"
+        android:paddingTop="24dp"
+        android:visibility="visible" />
 </android.support.constraint.ConstraintLayout>
