--- a/StyleSet/app/src/main/res/layout/titlebar_customizationr.xml
+++ b/StyleSet/app/src/main/res/layout/titlebar_customizationr.xml
@@ -18,7 +18,7 @@
         android:paddingLeft="8dp"
         android:paddingRight="4dp"
         android:paddingTop="24dp"
-        android:src="@mipmap/ic_launcher" />
+        android:src="@drawable/ic_go_back" />
     <TextView
         android:id="@+id/text_title"
         android:layout_width="wrap_content"
